<resources>

    <string name="app_name">Marietje</string>

    <string name="functionality_missing">Sorry! This functionality is not available yet.</string>

    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>

    <string name="songs_title_unknown">Unknown title</string>
    <string name="songs_artist_unknown">Unknown artist</string>

    <string name="request">Request</string>
    <string name="request_search_hint">Title or artist…</string>
    <string name="request_songs_empty">No songs found</string>
    <string name="request_songs_error">There was a problem loading the songs</string>
    <string name="request_confirm">Are you sure you want to request %1$s by %2$s?</string>
    <string name="request_success">Song successfully added to the queue.</string>
    <string name="request_error">Sorry! The song you selected could not be added to the queue</string>

    <string name="controls">Controls</string>

    <string name="queue">Queue</string>
    <string name="queue_loading_error">There was a problem loading the queue</string>
    <string name="queue_move_up">Move up in queue</string>
    <string name="queue_move_down">Move down in queue</string>
    <string name="queue_remove">Remove from queue</string>
    <string name="queue_skip">Skip current song</string>
    <string name="queue_move_down_success">Song successfully moved down in the queue</string>
    <string name="queue_move_down_error">Sorry! The song you selected could not be moved down in the queue</string>
    <string name="queue_move_up_success">Song successfully moved up in the queue</string>
    <string name="queue_move_up_error">Sorry! The song you selected could not be moved up in the queue</string>
    <string name="queue_remove_success">Song successfully removed from the queue</string>
    <string name="queue_remove_error">Sorry! The song you selected could not be removed from the queue</string>
    <string name="queue_skip_success">Current song successfully skipped</string>
    <string name="queue_skip_error">Sorry! The current song could not be skipped</string>

</resources>
