<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/tab_queue"
        android:icon="@drawable/ic_queue"
        android:title="@string/queue" />
    <item
        android:id="@+id/tab_request"
        android:icon="@drawable/ic_request"
        android:title="@string/request" />
</menu>